working app base for front- and backend

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 PORT=3001
-MONGODB_URL=
-SECRET_KEY=somerandomkey
+MONGODB_URL=mongodb+srv://TravelUser:travel123@cluster0.ssw26.mongodb.net/travelDB?retryWrites=true&w=majority
+SECRET_KEY=somerandomkeyforjwtgeneration
 MONGO_USER=TravelUser
 MONGO_PASSWORD=travel123
