--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "node index.js",
         "devstart": "nodemon index.js",
-        "heroku-postbuild": "cd ../client && npm install && npm run build"
+        "heroku-postbuild": "cd ./client && npm install && npm run build"
     },
     "keywords": [],
     "author": "",
