--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "devstart": "nodemon index.js",
-        "heroku-postbuild": "cd ./client && npm install && npm run build"
+        "start": "node server.js",
+        "devstart": "nodemon server.js",
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "keywords": [],
     "author": "",
