--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "//test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "test": "jest",
+    "start-nobrowser": "cross-env BROWSER=none react-scripts start"
   },
   "eslintConfig": {
     "extends": [
