--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.16.7",
+    "cross-env": "^7.0.3",
+    "jest": "^26.6.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   }
 }
